objects/EUR_CRM_Contract_Focus_Brand__c.object
<CustomObject>
    <description>For the following affiliates:
1. DE</description>
    <fields>
        <fullName>EUR_CRM_Brand__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>For the following affiliates:
1. Germany (DE)</description>
        <label>Brand</label>
        <referenceTo>EUR_CRM_Brand__c</referenceTo>
        <relationshipLabel>Contract Focus Brands</relationshipLabel>
        <relationshipName>EUR_CRM_Contract_Focus_Brands</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Contract__c</fullName>
        <description>For the following affiliates:
1. Germany (DE)</description>
        <label>Contract (EU)</label>
        <referenceTo>EUR_CRM_Contract__c</referenceTo>
        <relationshipName>EUR_CRM_Contract_Focus_Brands</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Name_Reference__c</fullName>
        <description>For VisualForce page use.

For the following affiliates:
1. DE</description>
        <label>Name Reference</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Contract Focus Brand (EU)</label>
    <nameField>
        <displayFormat>FB-{0000000000}</displayFormat>
        <label>Contract Focus Brand Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Contract Focus Brand (EU)</pluralLabel>
    <recordTypes>
        <fullName>EUR_DE_Focus_Brand</fullName>
        <active>true</active>
        <description>Focus Brand for Germany (DE)</description>
        <label>EUR_DE_Focus_Brand</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>